<resources>
    <string name="app_name">CampusCollab</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="school_selector_text">Select your school to get started</string>
    <string name="BYU_school_name">Brigham Young University</string>
    <string name="BYUI_school_name">Brigham Young University - Idaho</string>
    <string name="BYUH_school_name">Brigham Young University - Hawaii</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_information">Account Information</string>
    <string name="create_project">Create Project</string>
    <string name="project_title">Project Title</string>
    <string name="project_description">Project Description</string>
    <string name="project_member_num">Number of Group Members:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="pending_requests">Sent Requests</string>
    <string name="apply_to_project">Request to Join Project</string>
    <string name="owned_projects">My Projects</string>
    <string name="participating_projects">Joined Projects</string>
    <string name="messages">Messages</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="no_messages">No message threads</string>
</resources>