<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:id="@+id/gradientView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createProjectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_project"
        android:textColor="@color/white"
        android:textSize="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createProjectTitle">

        <EditText
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_field"
            android:backgroundTint="@color/input_gray"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/project_title"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/transparent_white" />

        <EditText
            android:id="@+id/projectDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_field"
            android:backgroundTint="@color/input_gray"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/project_description"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/transparent_white" />

        <Button
            android:id="@+id/createProjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_project" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>